--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@typescript-eslint/eslint-plugin": "^4.7.0",
     "@typescript-eslint/parser": "^4.7.0",
     "eslint": "^7.13.0",
+    "eslint-config-prettier": "^6.15.0",
     "eslint-config-seedium": "^1.0.20",
     "eslint-plugin-react": "^7.21.5",
     "prettier": "^2.1.2"
