feat: update prettier config

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,9 @@
 {
-  "tabWidth": 2,
   "singleQuote": true,
-  "jsxSingleQuote": true
+  "semi": true,
+  "jsxSingleQuote": true,
+  "trailingComma": "es5",
+  "arrowParens": "always",
+  "printWidth": 80,
+  "proseWrap": "never"
 }
